--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ali Solanki | Portfolio Website | Developer</title>
+	<title>Ayush Gupta | Portfolio Website | Developer</title>
 	<meta name="description" content="Ali Solanki is a Developer cum YouTuber and is a B.Tech student at KJ Somaiya College Of Engineering">  
 	<meta name="author" content="Mohd. Ali Solanki">
 
@@ -74,12 +74,12 @@
    <header>   	
    	<div class="">
 
-   		<div class="bar">
+   		<!-- <div class="bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
 		         <a href="index.html">Ali Solanki</a>
-		      </div>		      
+		      </div>	-->	       
 
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
@@ -106,13 +106,13 @@
 
    			<div class="col-twelve">
 
-				   <h5>Hello, World.</h5>
-					<h1>I<span style="color: #CC005F;">'</span>m Ali Solanki<span style="color: #CC005F;">.</span></h1>
+				   <h5>Namaste, World.</h5>
+					<h1>I<span style="color: #00cc6d;">'</span>m Ayush Gupta<span style="color: #00cc6d;">.</span></h1>
 
                     <p class="intro-position">
                         <span>Developer</span>
-                        <span>Starter</span>
-                        <span>YouTuber</span>
+                        <span>AI/ML Enthusiast</span>
+                        <span>Learner</span>
                     </p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -123,14 +123,14 @@
    	</div> <!-- /intro-content --> 
 
         <ul class="intro-social">
-            <li><a href="https://www.linkedin.com/in/ali-solanki-2a1227192/"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="https://www.instagram.com/alisolankii"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://github.com/alisolanki"><i class="fa fa-github"></i></a></li>
-            <li><a href="https://www.youtube.com/channel/UCgzz4Kd1YpzxJOkrhf5U_7A/"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="https://www.codechef.com/users/alisolanki"><i class="fa fa-code"></i></a></li>
-            <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/ayushgupta1201/"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://twitter.com/AyushGupta1201"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://github.com/Ayush-gupta155"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://auth.geeksforgeeks.org/user/ayushhguptaa/"><i class="fa fa-bars"></i></a></li>
+            <li><a href="https://mail.google.com/mail/u/1/#inbox"><i class="fa fa-envelope"></i></a></li>
+            <!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
 	    <li><a href="https://apps.apple.com/gh/developer/ali-solanki/id1556898924"><i class="fa fa-apple"></i></a></li>
-        </ul> <!-- /intro-social -->      	
+        </ul> /intro-social -->      	
 
    </section> <!-- /intro -->
 
@@ -142,19 +142,19 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
             <!-- YouTube section ================================================== -->
-            <div style="padding-bottom: 10rem; height: 400px;">
+            <!-- <div style="padding-bottom: 10rem; height: 400px;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/8zzwUypZiF8" frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            </div> -->
 
    			<h5>About</h5>
-   			<h2>Let me introduce myself.</h2>
+   			<h2>Let me introduce myself !!.</h2>
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Ali Solanki Picture">
+   				<img src="images/My_photo.jpeg" alt="Ali Solanki Picture">
 
-   				<p class="lead">"Lad with a <font color="#FF0077">million</font> dreams."</p>
+   				<p class="lead">"Dreams are <font color="#00cc6d">Real</font>."</p>
    			</div>   			
 
    		</div>   		
@@ -171,11 +171,11 @@
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Mohd. Ali Solanki</span>
+   					<span>Ayush Gupta</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>November 8th, 2001</span>
+   					<span>January 12th, 2001</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -183,8 +183,8 @@
    				</li>
                     <li>
                         <strong>Email:</strong>
-                        <span>alisolanki123@gmail.com</span>
-                        <span>mohammed.solanki@somaiya.edu</span>
+                        <span>agayushgupta12@gmail.com</span>
+                        <span>ayush.gupta2019@vitbhopal.ac.in</span>
                     </li>
 
    			</ul> <!-- /info-list -->
@@ -197,10 +197,10 @@
                 <p>
                     <strong>Languages:</strong><br />
                     <b>English :</b><br /> Read, Write, Speak : <i>Native</i><br />
-                    <b>Hindi :</b><br /> Read, Write, Speak : <i>Native</i><br />
+                    <!-- <b>Hindi :</b><br /> Read, Write, Speak : <i>Native</i><br />
                     <b>Marathi :</b><br /> Read, Write, Speak : <i>Native</i><br />
                     <b>French :</b><br /> Read, Write : <i>Proficient</i><br />
-                    <b>Gujarati :</b><br /> Read, Speak : <i>Mother Tongue</i><br />
+                    <b>Gujarati :</b><br /> Read, Speak : <i>Mother Tongue</i><br /> -->
 
                 </p>
 
@@ -208,23 +208,23 @@
                 <ul class="skill-bars">
                     <li>
 <!--                         <div class="progress percent95"><span>95%</span></div> -->
-                        <strong>Flutter | Dart</strong>
-                    </li>
-                    <li>
-<!--                         <div class="progress percent90"><span>90%</span></div> -->
-                        <strong>Firebase</strong>
-                    </li>
-                    <li>
-<!--                         <div class="progress percent85"><span>90%</span></div> -->
                         <strong>Python</strong>
                     </li>
                     <li>
+<!--                         <div class="progress percent90"><span>90%</span></div> -->
+                        <strong>Machine Learning | Deep Learning</strong>
+                    </li>
+                    <li>
+<!--                         <div class="progress percent85"><span>90%</span></div> -->
+                        <strong>Flask FrameWork</strong>
+                    </li>
+                    <li>
 <!--                         <div class="progress percent75"><span>75%</span></div> -->
-                        <strong>Android Studio | Kotlin, </strong>
+                        <strong>SQL</strong>
                     </li>
 		    <li>
 <!--                         <div class="progress percent75"><span>75%</span></div> -->
-                        <strong>React</strong>
+                        <strong>UI/UX(Figma)</strong>
                     </li>
 
                 </ul> <!-- /skill-bars -->		
