--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li><a href="https://twitter.com/AyushGupta1201"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://github.com/Ayush-gupta155"><i class="fa fa-github"></i></a></li>
             <li><a href="https://auth.geeksforgeeks.org/user/ayushhguptaa/"><i class="fa fa-code"></i></a></li>
-            <li><a href="https://mail.google.com/mail/u/1/#inbox"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="agayushgupta12@gmail.com"><i class="fa fa-envelope"></i></a></li>
             <!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
 	    <li><a href="https://apps.apple.com/gh/developer/ali-solanki/id1556898924"><i class="fa fa-apple"></i></a></li>
         </ul> /intro-social -->      	
@@ -146,7 +146,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<!-- <span><a href="#">https://alisolanki.github.io/Portfolio/</a></span> -->
+   					<span><a href="#">https://ayush-gupta155.github.io/Portfolio-Ayush-Gupta/</a></span>
    				</li>
                     <li>
                         <strong>Email:</strong>
@@ -431,7 +431,7 @@
 					      <div class="categories">Deep Learning and Transfer Learning , API , Flask Framework</div>			               
 					   </div>
 			         <div class="link-box">
-			            <a href="https://github.com/Ayush-gupta155/Predicting-Used-Car-Prices-Using-Machine-Learning">GitHub</a>
+			            <a href="https://github.com/Ayush-gupta155/Covid-19-Detection-using-Transfer-Learning-">GitHub</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
                 </div> <!-- /modal-07 -->
