--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li><a href="https://twitter.com/AyushGupta1201"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://github.com/Ayush-gupta155"><i class="fa fa-github"></i></a></li>
             <li><a href="https://auth.geeksforgeeks.org/user/ayushhguptaa/"><i class="fa fa-code"></i></a></li>
-            <li><a href="agayushgupta12@gmail.com"><i class="fa fa-envelope"></i></a></li>
+<!--             <li><a href="agayushgupta12@gmail.com"><i class="fa fa-envelope"></i></a></li> -->
             <!-- <li><a href="https://play.google.com/store/apps/dev?id=6991863212111988524"><i class="fa fa-play"></i></a></li>
 	    <li><a href="https://apps.apple.com/gh/developer/ali-solanki/id1556898924"><i class="fa fa-apple"></i></a></li>
         </ul> /intro-social -->      	
