--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4><a href="https://kjsce.somaiya.edu/">Vellore Institute of Technology,Bhopal</a></h4>
+	   					<h4><a href="https://vitbhopal.ac.in/">Vellore Institute of Technology,Bhopal</a></h4>
 	   					<p>Currently pursuing Integrated Masters Degree in Computer Science with specialization in AI & ML (CSE) at VIT Bhopal. </p>
 	   				</div>
 
@@ -263,7 +263,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4><a href="https://bit.ly/346hi4s">Subodh Public School</a></h4>
+	   					<h4><a href="https://www.spsairport.com/">Subodh Public School</a></h4>
 	   					<p>Completed my schooling through CBSE Board at Subodh Public School, Sanganer - Jaipur.</p>
 	   				</div>
 
